# processing-python

./: .gitignore  README.md  compress_thresh.py  main.py  pyproject.toml  read_compression.py  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_fix.md  code_review.md  (+2 more)
Coastline Extraction/: CoastlineExtractionV32_NIR.py  CoastlineExtraction_5.py
chain_encode/: chain_encode.py
cloud-mask/: __init__.py  cloud-mask.ipynb  cloud_mask.py  new-cloud-mask.py  test_cloud_mask.py
cloud_mask/: __init__.py  cloud_mask.py  test_cloud_mask.py
combination/: test-1.ipynb
full_pipeline_testing/: main_pipeline.py  main_pipeline_with_flask.py  marching_squares_refined.py  modified_cloud_mask.py  modified_coastline_extraction.py  modified_marching_squares_altseg.py  notes.txt
marching-squares/: Marching_Squares.ipynb  Test.txt  functional-marching-squares.ipynb  marching-squares.py  object-orientated-marchingsquares.ipynb
marching_squares/: CMakeLists.txt  Marching_Squares.ipynb  object-orientated-marchingsquares.ipynb
marching_squares/OLD/: Marching Squares.ipynb
marching_squares/include/: marching_squares.hpp
marching_squares/marching_squares/: __init__.py  marching_squares.py  test_marching_squares.py
marching_squares/src/: main.cpp  marching_squares.cpp
results-analysis/: analysis.ipynb
training-data-download/: clip_images.py  download_earth_engine.py  locations.csv
unet/: Seg_models_test_for_Coast.ipynb  UNET_prediction.py  __init__.py  model_maker.py  plotting_figures.py  test_UNET_prediction.py  unet_prediction.py
(+720 files in other folders)
